add natural language processing

--- a/kaggle/winereviews/Untitled.ipynb
+++ b/kaggle/winereviews/Untitled.ipynb
@@ -656,7 +656,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -687,7 +689,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
