add housing dataset

--- a/beginner/linear-regression/house.ipynb
+++ b/beginner/linear-regression/house.ipynb
@@ -12,17 +12,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1a00e624-4a57-4e80-8f80-641823f04e33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "house age (414,)\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.linear_model import LinearRegression\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import csv\n",
     "import io\n",
-    "import requests\n"
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import requests\n",
+    "\n",
+    "data_url = 'https://raw.githubusercontent.com/zhaoyi0113/machine-learning/master/dataset/real_estate.csv'\n",
+    "\n",
+    "r = requests.get(data_url)\n",
+    "buff = io.StringIO(r.text)\n",
+    "dr = csv.DictReader(buff, delimiter=',')\n",
+    "type(dr)\n",
+    "data_dic = list(dr)\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "data_array = np.array(data_dic)\n",
+    "array = np.array([list(d.values()) for d in data_dic])\n",
+    "\n",
+    "house_age, nearest_mrt, number_stores, price = (array[:, 2]).astype(float), array[:, 3].astype(float),(array[:, 4]).astype(float), (array[:, 7]).astype(float)\n",
+    "\n",
+    "print('house age', house_age.shape)"
    ]
   },
   {
@@ -141,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 20,
    "id": "32af6a38-99fc-4290-88f3-96fc4e0ee323",
    "metadata": {},
    "outputs": [
@@ -149,56 +176,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "price (414,)\n",
+      "data (414, 2)\n",
       "(331, 2) (83, 2) (331,) (83,)\n",
-      "train: (6889, 2)\n",
-      "target_pred (6889,)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "y_true and y_pred have different number of output (2!=1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[276], line 46\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain:\u001b[39m\u001b[38;5;124m'\u001b[39m, np\u001b[38;5;241m.\u001b[39marray([x\u001b[38;5;241m.\u001b[39mravel(), y\u001b[38;5;241m.\u001b[39mravel()])\u001b[38;5;241m.\u001b[39mT\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtarget_pred\u001b[39m\u001b[38;5;124m\"\u001b[39m, target_pred\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m---> 46\u001b[0m r2_train \u001b[38;5;241m=\u001b[39m \u001b[43mr2_score\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mravel\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mravel\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     48\u001b[0m target_pred \u001b[38;5;241m=\u001b[39m target_pred\u001b[38;5;241m.\u001b[39mreshape(x\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     49\u001b[0m fig \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mfigure()\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.6/lib/python3.10/site-packages/sklearn/utils/_param_validation.py:214\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    208\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    209\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[1;32m    210\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m    211\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[1;32m    212\u001b[0m         )\n\u001b[1;32m    213\u001b[0m     ):\n\u001b[0;32m--> 214\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    215\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    216\u001b[0m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[1;32m    217\u001b[0m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[1;32m    218\u001b[0m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[1;32m    219\u001b[0m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[1;32m    220\u001b[0m     msg \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\n\u001b[1;32m    221\u001b[0m         \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+ must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    222\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    223\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[1;32m    224\u001b[0m     )\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.6/lib/python3.10/site-packages/sklearn/metrics/_regression.py:989\u001b[0m, in \u001b[0;36mr2_score\u001b[0;34m(y_true, y_pred, sample_weight, multioutput, force_finite)\u001b[0m\n\u001b[1;32m    848\u001b[0m \u001b[38;5;129m@validate_params\u001b[39m(\n\u001b[1;32m    849\u001b[0m     {\n\u001b[1;32m    850\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_true\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124marray-like\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    868\u001b[0m     force_finite\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m    869\u001b[0m ):\n\u001b[1;32m    870\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\":math:`R^2` (coefficient of determination) regression score function.\u001b[39;00m\n\u001b[1;32m    871\u001b[0m \n\u001b[1;32m    872\u001b[0m \u001b[38;5;124;03m    Best possible score is 1.0 and it can be negative (because the\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    987\u001b[0m \u001b[38;5;124;03m    -inf\u001b[39;00m\n\u001b[1;32m    988\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 989\u001b[0m     y_type, y_true, y_pred, multioutput \u001b[38;5;241m=\u001b[39m \u001b[43m_check_reg_targets\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    990\u001b[0m \u001b[43m        \u001b[49m\u001b[43my_true\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmultioutput\u001b[49m\n\u001b[1;32m    991\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    992\u001b[0m     check_consistent_length(y_true, y_pred, sample_weight)\n\u001b[1;32m    994\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m _num_samples(y_pred) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m2\u001b[39m:\n",
-      "File \u001b[0;32m~/.pyenv/versions/3.10.6/lib/python3.10/site-packages/sklearn/metrics/_regression.py:110\u001b[0m, in \u001b[0;36m_check_reg_targets\u001b[0;34m(y_true, y_pred, multioutput, dtype)\u001b[0m\n\u001b[1;32m    107\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m y_pred\u001b[38;5;241m.\u001b[39mreshape((\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m))\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y_true\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m!=\u001b[39m y_pred\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]:\n\u001b[0;32m--> 110\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    111\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_true and y_pred have different number of output (\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m!=\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[1;32m    112\u001b[0m             y_true\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], y_pred\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    113\u001b[0m         )\n\u001b[1;32m    114\u001b[0m     )\n\u001b[1;32m    116\u001b[0m n_outputs \u001b[38;5;241m=\u001b[39m y_true\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    117\u001b[0m allowed_multioutput_str \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mraw_values\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muniform_average\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvariance_weighted\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: y_true and y_pred have different number of output (2!=1)"
+      "score 0.4472751905069783\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import matplotlib as mpl\n",
-    "import csv\n",
-    "import io\n",
-    "from sklearn.metrics import r2_score\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "data_url = 'https://raw.githubusercontent.com/zhaoyi0113/machine-learning/master/dataset/real_estate.csv'\n",
-    "\n",
-    "r = requests.get(data_url)\n",
-    "buff = io.StringIO(r.text)\n",
-    "dr = csv.DictReader(buff, delimiter=',')\n",
-    "type(dr)\n",
-    "data_dic = list(dr)\n",
-    "model = LinearRegression()\n",
-    "\n",
-    "data_array = np.array(data_dic)\n",
-    "array = np.array([list(d.values()) for d in data_dic])\n",
-    "house_age = (array[:, 2]).astype(float)\n",
-    "number_stores = (array[:, 4]).astype(float)\n",
-    "price = (array[:, 7]).astype(float)\n",
     "\n",
     "x = np.vstack((house_age, number_stores))\n",
     "x = x.T\n",
     "\n",
     "data=x\n",
     "target=price\n",
+    "print('price', price.shape)\n",
+    "print('data', data.shape)\n",
+    "\n",
     "data_train, data_test, target_train, target_test = train_test_split(data, target, test_size=0.2, random_state=42)\n",
     "\n",
     "print(data_train.shape, data_test.shape, target_train.shape, target_test.shape)\n",
@@ -206,26 +200,10 @@
     "model = LinearRegression()\n",
     "model.fit(data_train, target_train)\n",
     "\n",
-    "# Create a grid of points\n",
-    "x = data_test[:, 0]\n",
-    "y = data_test[:, 1]\n",
-    "x, y = np.meshgrid(x, y)\n",
+    "score = model.score(data_test, target_test)\n",
+    "print('score', score)\n",
     "\n",
-    "target_pred = model.predict(np.array([x.ravel(), y.ravel()]).T)\n",
-    "\n",
-    "print('train:', np.array([x.ravel(), y.ravel()]).T.shape)\n",
-    "print(\"target_pred\", target_pred.shape)\n",
-    "r2_train = r2_score(np.array([x.ravel(), y.ravel()]).T, target_pred)\n",
-    "\n",
-    "target_pred = target_pred.reshape(x.shape)\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "# Plot the data points\n",
-    "ax.scatter(data_train[:, 0], data_train[:, 1], target_train)\n",
-    "x1, x2 = np.meshgrid(data_test[:,0], data_test[:,1])\n",
-    "\n",
-    "ax.plot_surface(x1, x2, target_pred, alpha=0.2, color='red')\n"
+    "\n"
    ]
   },
   {
